# promptlab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: bad_prompt.txt  good_prompt.txt
promptlab/: __init__.py  analyzer.py  cli.py  enhancer.py  patterns.py  reporter.py
tests/: test_analyzer.py
